deploy: d5705a7cd608404674910af3bfe86687a159cd56

--- a/events/2020-03-hacknlearn/index.html
+++ b/events/2020-03-hacknlearn/index.html
@@ -1,4 +1,31 @@
-<!-- place this in the head of your document -->
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Rust Tallinn Hack&#39;n&#39;learn — March 13, 2020</title>
+    <meta name="title" content="Rust Tallinn Hack&#39;n&#39;learn — March 13, 2020">
+    <meta name="description" content="">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tallinn.rs/">
+    <meta property="og:site_name" content="Rust Tallinn Hack&#39;n&#39;learn — March 13, 2020Rust Tallinn Hack&#39;n&#39;learn — March 13, 2020">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:title" content="Rust Tallinn Hack&#39;n&#39;learn — March 13, 2020">
+    <meta property="og:description" content="">
+    <!-- <meta property="og:image" content="https://tallinn.rs/logo.jpg"> -->
+    <!-- <meta property="twitter:card" content="summary_large_image"> -->
+    <meta property="twitter:site" content="@rusttallinn">
+    <meta property="twitter:url" content="https://tallinn.rs/">
+    <meta property="twitter:title" content="Rust Tallinn Hack&#39;n&#39;learn — March 13, 2020">
+    <meta property="twitter:description" content="">
+    <!-- <meta property="twitter:image" content="https://tallinn.rs/logo.jpg"> -->
+
+    <link rel="stylesheet" href="/fonts/fonts.css">
+    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="/assets/eventpage.css">
+  </head>
+  <body class="events">
+    <!-- place this in the head of your document -->
 <script src="https://js.tito.io/v1" async></script>
 <h1>Announcement</h1>
 <p><strong>We're excited to announce the first-ever Rust programming language event in Tallinn with more to come!</strong></p>
@@ -48,3 +75,6 @@ Everyone is welcome, and we're striving to have fun, learn, tinker and help one 
 <h2>Code of Conduct</h2>
 <p>Please note that Rust Tallinn has a Code of Conduct that also applies to this event. Please make sure you read, understand and abide by the rules of conduct so we can ensure it's a welcoming learning environment.
 <a href="https://berlincodeofconduct.org/">https://berlincodeofconduct.org/</a></p>
+
+  </body>
+</html>
