deploy: 7100d38729ae603fae01d24db7e67387f289e0c1

--- a/events/2020-03-hacknlearn-gift/index.html
+++ b/events/2020-03-hacknlearn-gift/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="/assets/eventpage.css">
   </head>
   <body class="events">
-    <form id="gift" onsubmit="window.open(`https://baytech.community/rusttallinn/march-2020-hnl/wolt-gip8ybs6/${document.forms.gift.tito.value}.pdf`); return false">
+    <form id="gift" onsubmit="window.open(`https://baytech.community/rusttallinn/march-2020-hnl/wolt-gip8ybs6/${document.forms.gift.tito.value.toUpperCase()}.pdf`); return false">
 <img alt="Pizza Ferris" src="/assets/events/2020-03-hacknlearn/hnl-ferris.svg" style="margin: -10% auto;" />
 <h2>Claim your gift!</h2>
 <p>Type your Tito registration ID below:</p>
