Revamped homepage with new design & logo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
     <link rel="stylesheet" href="/assets/style.css">
   </head>
   <body class="opening">
-    <h1>Welcome to Rust&nbsp;Tallinn</h1>
-    <h2><a href="/events/2020-03-hacknlearn">Our first meetup is now live!</a></h2>
+    <main>
+      <img src="/assets/rust-tallinn-small.png" alt="Rust Tallinn logo - Ferris the crab holding blue cornflowers and wearing a cornflower wreath standing in front of an old castle with the Rust programming language logo on its facade" />
+      <h1>Welcome to Rust&nbsp;Tallinn</h1>
+      <h2><a href="/events/2020-07-hacknlearn">Our next event will be on July 29th!</a></h2>
+      <ul>
+        <li><a href="/events/2020-03-hacknlearn">Previous Event</a></li>
+        <li><a href="/policies/code-of-conduct">Code of Conduct</a></li>
+        <li><a href="/policies/about">About</a></li>
+      </ul>
   </body>
 </html>
