--- a/index.html
+++ b/index.html
@@ -5,26 +5,35 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Rust Tallinn</title>
     <meta name="title" content="Welcome to Rust Tallinn">
-    <meta name="description" content="">
+    <meta name="description" content="The Estonian Rust programming language community">
+
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://tallinn.rs/">
     <meta property="og:site_name" content="Rust Tallinn">
     <meta property="og:locale" content="en_US">
     <meta property="og:title" content="Welcome to Rust Tallinn">
-    <meta property="og:description" content="">
-    <!-- <meta property="og:image" content="https://tallinn.rs/logo.jpg"> -->
-    <!-- <meta property="twitter:card" content="summary_large_image"> -->
+    <meta property="og:description" content="The Estonian Rust programming language community">
+    <meta property="og:image" content="https://tallinn.rs/assets/ferris_rusttallinn_icon_by_atsuzakii.png">
+
+    <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:site" content="@rusttallinn">
     <meta property="twitter:url" content="https://tallinn.rs/">
     <meta property="twitter:title" content="Welcome to Rust Tallinn">
-    <meta property="twitter:description" content="">
-    <!-- <meta property="twitter:image" content="https://tallinn.rs/logo.jpg"> -->
+    <meta property="twitter:description" content="The Estonian Rust programming language community">
+    <meta property="twitter:image" content="https://tallinn.rs/assets/rust-tallinn-small.png">
 
     <link rel="stylesheet" href="/fonts/fonts.css">
     <link rel="stylesheet" href="/assets/style.css">
   </head>
   <body class="opening">
-    <h1>Welcome to Rust&nbsp;Tallinn</h1>
-    <h2><a href="/events/2020-03-hacknlearn">Our first meetup is now live!</a></h2>
+    <main>
+      <img src="/assets/rust-tallinn-small.png" alt="Rust Tallinn logo - Ferris the crab holding blue cornflowers and wearing a cornflower wreath standing in front of an old castle with the Rust programming language logo on its facade" />
+      <h1>Welcome to Rust&nbsp;Tallinn</h1>
+      <h2><a href="/events/2020-07-hacknlearn">Our next event will be on July 29th!</a></h2>
+      <ul>
+        <li><a href="/events/2020-03-hacknlearn">Previous Event</a></li>
+        <li><a href="/policies/code-of-conduct">Code of Conduct</a></li>
+        <li><a href="/policies/about">About</a></li>
+      </ul>
   </body>
 </html>
