Update homepage, README instructions

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <main>
       <img src="/assets/rust-tallinn-small.png" alt="Rust Tallinn logo - Ferris the crab holding blue cornflowers and wearing a cornflower wreath standing in front of an old castle with the Rust programming language logo on its facade" />
       <h1>Welcome to Rust&nbsp;Tallinn</h1>
-      <h2><a href="/events/2020-07-hacknlearn">Our next event will be on July 29th!</a></h2>
+      <h2>We currently don't have no upcoming event!</h2>
       <ul>
-        <li><a href="/events/2020-03-hacknlearn">Previous Event</a></li>
+        <li>Previous Events: <a href="/events/2020-07-hacknlearn">2020/07</a> | <a href="/events/2020-03-hacknlearn">2020/03</a></li>
         <li><a href="/policies/code-of-conduct">Code of Conduct</a></li>
         <li><a href="/policies/about">About</a></li>
       </ul>
